--- a/2D Platform Shooting/2D Platform Shooting.vcxproj.filters
+++ b/2D Platform Shooting/2D Platform Shooting.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Player.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Utilities.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Level.h">
@@ -36,6 +39,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Utilities.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
