--- a/2D Platform Shooting/2D Platform Shooting.vcxproj
+++ b/2D Platform Shooting/2D Platform Shooting.vcxproj
@@ -130,6 +130,7 @@
       </PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)\libs\SFML-2.5.1\include</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
