앞으로의 편의성을 위한 pch 추가

--- a/2D Platform Shooting/2D Platform Shooting.vcxproj.filters
+++ b/2D Platform Shooting/2D Platform Shooting.vcxproj.filters
@@ -72,5 +72,8 @@
     <ClInclude Include="Utilities.h">
       <Filter>Util</Filter>
     </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Util</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
