--- a/2D Platform Shooting/2D Platform Shooting.vcxproj
+++ b/2D Platform Shooting/2D Platform Shooting.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="pch.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
