--- a/2D Platform Shooting/2D Platform Shooting.vcxproj.filters
+++ b/2D Platform Shooting/2D Platform Shooting.vcxproj.filters
@@ -25,8 +25,14 @@
     <Filter Include="Objects\gun">
       <UniqueIdentifier>{90c0887f-0eeb-4910-b8fd-3b8c74f0714f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Image">
+    <Filter Include="Res">
+      <UniqueIdentifier>{acfae00d-ae11-4585-8cd2-6177a65c0a13}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Res\Image">
       <UniqueIdentifier>{1621eac8-171d-490f-9e8e-7acadcc54a47}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Res\Text">
+      <UniqueIdentifier>{2871b454-cd73-4bd0-9488-faaabfc6974b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -56,7 +62,7 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Image.cpp">
-      <Filter>Image</Filter>
+      <Filter>Res\Image</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -85,7 +91,7 @@
       <Filter>Util</Filter>
     </ClInclude>
     <ClInclude Include="Image.h">
-      <Filter>Image</Filter>
+      <Filter>Res\Image</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
