--- a/Game Server/Game Server.vcxproj.filters
+++ b/Game Server/Game Server.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="World">
