--- a/Game Server/Game Server.vcxproj.filters
+++ b/Game Server/Game Server.vcxproj.filters
@@ -7,6 +7,9 @@
     <ClCompile Include="pch.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="World">
@@ -15,6 +18,9 @@
     <Filter Include="Utils">
       <UniqueIdentifier>{aa2ff4fd-0244-4177-86a6-1b443ba040a1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Objects">
+      <UniqueIdentifier>{7c9e2978-d89c-4c36-ab65-cea0fe6cdd4a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="World.h">
@@ -22,6 +28,9 @@
     </ClInclude>
     <ClInclude Include="pch.h">
       <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>Objects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
