--- a/2D Platform Shooting/2D Platform Shooting.vcxproj.filters
+++ b/2D Platform Shooting/2D Platform Shooting.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClCompile Include="GameScene.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
+    <ClCompile Include="TitleScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Gun.h">
@@ -115,6 +118,9 @@
       <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="GameScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="TitleScene.h">
       <Filter>Scene</Filter>
     </ClInclude>
   </ItemGroup>
