--- a/Network Protocol/Network Protocol.vcxproj
+++ b/Network Protocol/Network Protocol.vcxproj
@@ -163,6 +163,7 @@
   <ItemGroup>
     <ClCompile Include="CorePch.cpp" />
     <ClCompile Include="GunLoader.cpp" />
+    <ClCompile Include="Packet.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
