씬 수정 및 버그 찾음
Pch에 전역 변수를 둘 수 없었던 버그를 찾았다 int를 사용해서 생긴 문제였음
int_t를 사용하도록

--- a/2D Platform Shooting/2D Platform Shooting.vcxproj
+++ b/2D Platform Shooting/2D Platform Shooting.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="ClientNetworkManager.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="GlobalVariable.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Gun.cpp" />
     <ClCompile Include="Image.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="ClientNetworkManager.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="GlobalVariable.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Gun.h" />
     <ClInclude Include="Image.h" />
