ServerNetwork Manager 전역 변수
SNMgr 를 전역변수로 선언해 주었다

--- a/Game Server/Game Server.vcxproj.filters
+++ b/Game Server/Game Server.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClCompile Include="MovingObject.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="GlobalVariable.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="World">
@@ -77,6 +80,9 @@
     </ClInclude>
     <ClInclude Include="MovingObject.h">
       <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="GlobalVariable.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
