--- a/Network Protocol/Network Protocol.vcxproj
+++ b/Network Protocol/Network Protocol.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="GunLoader.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Platfoms.h" />
     <ClInclude Include="TimerManager.h" />
   </ItemGroup>
   <ItemGroup>
@@ -171,6 +172,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Platfoms.cpp" />
     <ClCompile Include="TimerManager.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
