--- a/Network Protocol/Network Protocol.vcxproj.filters
+++ b/Network Protocol/Network Protocol.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Platfoms.h">
       <Filter>GameInfo\Platform</Filter>
     </ClInclude>
+    <ClInclude Include="CoreGlobal.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -58,6 +61,9 @@
     </ClCompile>
     <ClCompile Include="Platfoms.cpp">
       <Filter>GameInfo\Platform</Filter>
+    </ClCompile>
+    <ClCompile Include="CoreGlobal.cpp">
+      <Filter>Utils</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
