--- a/Game Server/Game Server.vcxproj
+++ b/Game Server/Game Server.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="GlobalVariable.cpp" />
     <ClCompile Include="Item.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MovingObject.cpp" />
     <ClCompile Include="Object.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="GlobalVariable.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="MovingObject.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="pch.h" />
