--- a/Network Protocol/Network Protocol.vcxproj
+++ b/Network Protocol/Network Protocol.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="CoreGlobal.h" />
     <ClInclude Include="CorePch.h" />
     <ClInclude Include="GunLoader.h" />
+    <ClInclude Include="NetworkUtils.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Platfoms.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="CoreGlobal.cpp" />
     <ClCompile Include="CorePch.cpp" />
     <ClCompile Include="GunLoader.cpp" />
+    <ClCompile Include="NetworkUtils.cpp" />
     <ClCompile Include="Packet.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
